css fixes for div overflow

--- a/find-recipe-react/src/Hover.css
+++ b/find-recipe-react/src/Hover.css
@@ -6,5 +6,4 @@
 
 div {
     white-space: nowrap;
-    overflow: hidden;
 }
