--- a/find-recipe-react/src/Input.css
+++ b/find-recipe-react/src/Input.css
@@ -35,6 +35,7 @@ span {
     flex-direction: ltr;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 input[type=text] {
@@ -85,6 +86,10 @@ input[type=submit] {
     align-items: center;
     margin: 1px;
     justify-content: center;
+}
+
+#ingredient-list div{
+    width: 100%;
 }
 
 a:link {
